--- a/thefractalbot_web/templates/generate.html
+++ b/thefractalbot_web/templates/generate.html
@@ -265,6 +265,7 @@
                 return
             }
             this.spawn_one(true)
+            this.spawn_one(false)
         }
 
         update_hitboxes() {
@@ -323,8 +324,7 @@
         }
 
         render() {
-            this.ctx.fillStyle = "rgba(0, 0, 0, 0)"
-            this.ctx.fillRect(0, 0, this.canvas.width, this.canvas.height)
+            this.ctx.clearRect(0, 0, this.canvas.width, this.canvas.height)
             this.bubbles.forEach(bubble => bubble.render(this.ctx))
         }
 
@@ -360,8 +360,10 @@
 
     const tmpCanvas = document.getElementById("hidden-canvas")
     const tmpCtx = tmpCanvas.getContext("2d")
-    new Animation(40).start()
 
+    window.addEventListener("load", () => {
+        new Animation(40).start()
+    })
 
     </script>
 
