--- a/thefractalspace/templates/layouts/base.html
+++ b/thefractalspace/templates/layouts/base.html
@@ -5,7 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=yes, initial-scale=1.0, maximum-scale=6.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>{{ title }} - The Fractal Bot</title>
+    <title>{{ title }} - The Fractal Space</title>
     <link rel="stylesheet" href="{{ url_for("static", filename="style.css") }}">
 </head>
 <body>
