cleanup css + add warning in generate

--- a/thefractalspace/templates/generate.html
+++ b/thefractalspace/templates/generate.html
@@ -13,6 +13,8 @@
         </form>
     </section>
 
+    <p class="hitbox">Please be gentle with our server and don't generate a thousand fractals ;)</p>
+
     <canvas id="bubbles-canvas"></canvas>
     <canvas id="hidden-canvas"></canvas>
 
