--- a/thefractalspace/static/style.css
+++ b/thefractalspace/static/style.css
@@ -336,45 +336,10 @@ form {
     /*            -3px -3px 5px 3px rgba(255, 255, 255, 0.4);*/
 }
 
-.gen__img {
-
-}
-
-.bubble {
-    position: absolute;
-    width: 150px;
-    height: 150px;
-    z-index: -5;
-    will-change: auto;
-}
-
-.container--overlay {
-    position: relative;
-    display: block;
-    width: 100%;
-    height: 100%;
-}
-
-.generate__fractal {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-}
-
-.gen__img {
-    border-radius: 100%;
-}
-
-.overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 1;
-    background: radial-gradient(circle closest-side, rgba(26, 32, 44, 0) 90%, rgba(26, 32, 44, 1) 100%, rgba(26, 32, 44, 0) 101%);
+.generate + p {
+    max-width: 50vw;
+    text-align: center;
+    margin: 2rem auto;
 }
 
 picture {
