--- a/thefractalspace/templates/layouts/regular.html
+++ b/thefractalspace/templates/layouts/regular.html
@@ -5,7 +5,7 @@
 {% block body %}
     <div class="narrow_container">
         <nav class="top_bar separate_two">
-            <a href="{{ url_for("generate") }}" class="bar__title hitbox">The Fractal Space</a>
+            <a href="{{ url_for("generate") }}" class="bar__title hitbox">The Fractal Space - Beta</a>
             {{ navbar() }}
         </nav>
 
