--- a/thefractalspace/templates/generate.html
+++ b/thefractalspace/templates/generate.html
@@ -248,17 +248,29 @@
 
         spawn_one(left) {
             if (this.spawns_left-- > 0) {
-                const radius = window.innerWidth < 640
-                    ? randRange(12, 24)
-                    : randRange(15, 35)
-                const pos = new Vec2(
-                    left ? -radius - 10 : this.canvas.width + radius + 10,
-                    this.canvas.height + radius + 10
-                )
-                const vel = Vec2.fromPolar(
-                    randRange(1 / 6, 2 / 6) * Math.PI,
-                    randRange(90, 140)
-                )
+                let radius, pos, vel
+                if (window.innerWidth < 640) {
+                    radius = randRange(12, 24)
+                    pos = new Vec2(
+                        left ? -radius - 10 : this.canvas.width + radius + 10,
+                        this.canvas.height / 2
+                    )
+                    vel = Vec2.fromPolar(
+                        randRange(1/3, -1/3) * Math.PI,
+                        randRange(90, 140)
+                    )
+                } else {
+                    radius = randRange(15, 35)
+                    pos = new Vec2(
+                        left ? -radius - 10 : this.canvas.width + radius + 10,
+                        this.canvas.height + radius + 10
+                    )
+                    vel = Vec2.fromPolar(
+                        randRange(1 / 6, 2 / 6) * Math.PI,
+                        randRange(90, 140)
+                    )
+                }
+
 
                 this.bubbles.push(new Bubble(pos, vel, radius))
             }
