about: thank marc

--- a/thefractalspace/templates/about.html
+++ b/thefractalspace/templates/about.html
@@ -37,6 +37,12 @@
         for his time and advice.
     </p>
     <p class="p--about">
+        I would also like to thank <a href="https://risson.space">Marc</a>
+        for helping and teaching me how to deploy the server,
+        for building such a rich infrastructure for Lama Corp,
+        and for always improving my technological taste.
+    </p>
+    <p class="p--about">
         I also thank everyone who contributed to
         <a href="https://kivy.org/">kivy</a>,
         <a href="https://numba.pydata.org/">numba</a> and
