--- a/thefractalspace/templates/index.html
+++ b/thefractalspace/templates/index.html
@@ -1,15 +1,13 @@
-{% extends "layouts/base.html" %}
+{% extends "layouts/regular.html" %}
 {% from "macros/macros.html" import fractal, navbar, icon %}
 
-{% block body %}
+{% block content %}
     <div class="container">
 
         {{ fractal(seed, True, "fractal") }}
 
         <aside>
             <div>
-                {{ navbar() }}
-
                 <h1 class="aside__title">{{ title }}</h1>
                 {% if date %}
                     <time datetime="d-m-Y" class="aside__subtitle">{{ date.strftime("%d %b %Y") }}</time>
