about: add my contact

--- a/thefractalspace/templates/about.html
+++ b/thefractalspace/templates/about.html
@@ -3,6 +3,10 @@
 {% block content %}
     <h1 class="title--about">About this website</h1>
     <p class="p--about">
+        I'm Diego Dorn, a french math student, actually in
+        my second year of bachelor at the EPFL.
+    </p>
+    <p class="p--about">
         I always liked to draw fractals. <br>
         During my life, I made five or six programs to
         draw them, the first ones where basic and the last
@@ -62,4 +66,12 @@
             Heroicons</a>
         for the nice icons I use. {{ icon("sun") }}
     </p>
+
+
+    <h2 class="section__title--about">Contact</h2>
+    <p class="p--about">
+        You can contact me on Twitter <a href="https://twitter.com/LeQuanta">@LeQuanta</a>
+        or by email at: diego&nbsp;AT&nbsp;lama-corp&nbsp;DOT&nbsp;space <br>
+    </p>
+
 {% endblock %}
