--- a/thefractalspace/templates/index.html
+++ b/thefractalspace/templates/index.html
@@ -4,7 +4,7 @@
 {% block content %}
     <div class="container">
 
-        {{ fractal(seed, True, "fractal") }}
+        {{ fractal(seed, True, "fractal", "rounded") }}
 
         <aside>
             <div>
