--- a/thefractalspace/templates/layouts/regular.html
+++ b/thefractalspace/templates/layouts/regular.html
@@ -3,7 +3,7 @@
 
 
 {% block body %}
-    <div class="narrow_container">
+    <div class="container--narrow">
         <nav class="top_bar separate_two">
             <a href="{{ url_for("home") }}" class="bar__title hitbox">The Fractal Space - Beta</a>
             {{ navbar() }}
