--- a/thefractalspace/static/style.css
+++ b/thefractalspace/static/style.css
@@ -254,12 +254,14 @@ a:hover {
 .container {
     flex-grow: 1;
     display: flex;
+    flex-direction: row-reverse;
 }
 
 aside {
     /*width: 22%;*/
     min-width: 15rem;
-    padding-left: 1rem;
+    max-width: 20rem;
+    padding-right: 1rem;
     padding-bottom: 0.5rem;
     /*padding: 0.8rem;*/
     display: flex;
@@ -456,6 +458,7 @@ picture {
         border-radius: 0;
     }
     aside {
+        max-width: 100%;
         width: 100%;
         justify-content: space-between;
         padding: 1rem;
