--- a/thefractalspace/templates/generate.html
+++ b/thefractalspace/templates/generate.html
@@ -9,7 +9,7 @@
             <input aria-label="Fractal Seed"
                    name="seed"
                    type="text"
-                   placeholder="Enter a seed..."
+                   placeholder="Enter anything to generate a fractal..."
                    class="generate_input hitbox">
         </form>
     </section>
