--- a/thefractalspace/templates/macros/macros.html
+++ b/thefractalspace/templates/macros/macros.html
@@ -24,7 +24,7 @@
 {% macro navbar() %}
     <nav class="navbar">
         <a href="{{ url_for("latest") }}" class="hitbox">Latest</a>
-        <a href="{{ url_for("brouse") }}" class="hitbox">Brouse</a>
+        <a href="{{ url_for("brouse") }}" class="hitbox">Browse</a>
         <a href="{{ url_for("random") }}" class="hitbox">Random</a>
         <a href="{{ url_for("about") }}" class="hitbox">About</a>
     </nav>
