--- a/thefractalspace/templates/generate.html
+++ b/thefractalspace/templates/generate.html
@@ -77,6 +77,7 @@
          * @param {int} radius
          */
         constructor(pos, vel, radius) {
+            radius = Math.floor(radius)
             this.pos = pos;
             this.vel = vel;
             this.radius = radius;
@@ -199,8 +200,8 @@
                 this.img.addEventListener("load", () => { this.ready = true}, {once: true})
                 this.img.src = tmpCanvas.toDataURL("image/png")
             }, {once: true})
-            const seed = Math.floor(randRange(0, 1000))
-            this.img.src = `/img/${seed}.png?size=200`
+            const seed = Math.floor(randRange(0, 10000))
+            this.img.src = `/img/${seed}.png?size=${2 * this.radius}`
 
         }
         clear(ctx) {
