templates: about: use risson's online handle and fix Lama Corp. name

--- a/thefractalspace/templates/about.html
+++ b/thefractalspace/templates/about.html
@@ -41,9 +41,9 @@
         for his time and advice.
     </p>
     <p class="p--about">
-        I would also like to thank <a href="https://risson.space">Marc</a>
+        I would also like to thank <a href="https://risson.space">risson</a>
         for helping and teaching me how to deploy the server,
-        for building such a rich infrastructure for Lama Corp,
+        for building such a rich infrastructure for Lama Corp.,
         and for always improving my technological taste.
     </p>
     <p class="p--about">
