--- a/thefractalspace/templates/layouts/base.html
+++ b/thefractalspace/templates/layouts/base.html
@@ -5,8 +5,10 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=yes, initial-scale=1.0, maximum-scale=6.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>{{ title }} - The Fractal Space</title>
-    <link rel="stylesheet" href="{{ url_for("static", filename="style.css") }}">
+    {% block title %}
+        <title>The Fractal Space</title>
+    {% endblock %}
+    <link rel="stylesheet" href="{{ static("style.css") }}">
 </head>
 <body>
 {% block body %}{% endblock %}
